<resources>
    <string name="app_name">ninemova</string>
    <string name="bottom_menu_home">홈</string>
    <string name="bottom_menu_search">영화 검색</string>
    <string name="bottom_menu_recommend">영화 추천</string>
    <string name="bottom_menu_community">커뮤니티</string>
    <string name="bottom_menu_my_page">마이페이지</string>
    <string name="search_text_hint">제목을 입력해주세요</string>
    <string name="btn_register_comment">한줄평 작성하기</string>
</resources>
