<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_menu_home" />
    <item
        android:id="@id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/bottom_menu_search" />
    <item
        android:id="@id/recommendFragment"
        android:icon="@drawable/ic_movie"
        android:title="@string/bottom_menu_recommend" />
    <item
        android:id="@id/communityFragment"
        android:icon="@drawable/ic_community"
        android:title="@string/bottom_menu_community" />
    <item
        android:id="@id/myPageFragment"
        android:icon="@drawable/ic_mypage"
        android:title="@string/bottom_menu_my_page" />
</menu>
